feat: optimizing NgRx signalStore

--- a/src/app/shared/food-item/food-item.component.scss
+++ b/src/app/shared/food-item/food-item.component.scss
@@ -23,7 +23,7 @@
     font-family: Bahnschrift, serif;
     cursor: pointer;
     &:hover{
-      transition: 0.2s all ease-in;
+      transition: 0.1s ease-in;
       background-color: #2a72b3;
       color: #fff;
     }
