--- a/src/app/layout/layout-header/layout-header.component.html
+++ b/src/app/layout/layout-header/layout-header.component.html
@@ -2,6 +2,6 @@
   <h1>Food Shop</h1>
   <!---->
   <div class="layout-header-cart">
-    <p>Cart items: 0</p>
+    <p>Cart items: {{ cartStore.getCartLength() }}</p>
   </div>
 </div>
